tests/baselines/reference/binaryArithmatic4.errors.txt
==== tests/cases/compiler/binaryArithmatic4.ts (2 errors) ====
    var v = null | null;
            ~~~~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                   ~~~~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.